--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,21 @@ body {
   height: 20px;
   margin-right: 15px;
 }
+
+.dragon-avatar-image-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dragon-avatar-image-pattern {
+  position: absolute;
+}
+
+.dragon-avatar-image-background {
+  position: absolute;
+}
+
+.dragon-avatar-image {
+  z-index: 0;
+}
